tests/files/flow_controller_tests/should_fail/087.cmdr
x = false;
print arccsc(x);